@@ -17,36 +17,41 @@ import lombok.*;
 @Setter
 public class CursoController implements Serializable {
 
+    private static final long serialVersionUID = 1L;
+
     @Inject
     private GeneralController generalController;
 
     // ============================
-    // 1. ATRIBUTOS
+    // ATRIBUTOS
     // ============================
     private List<ejbCcoCursoDTO> lstCursosDTO;
     private List<ejbCcoCursoDTO> lstCursosViewDTO;
     private ejbCcoCursoDTO clsCursoDTO;
     private String strBusqueda;
     private String strValor;
-    private List<String> temas;
     private Integer idEdicion;
     private List<ejbCcoCepNivelModalidad> lstNivelesModalidad;
     private Integer idNivelSeleccionado;
+    private List<ejbCcoCepCecPlan> lstPlanesDisponibles;
+    private Integer idPlanSeleccionado;
 
     private static final String VISTA_LISTA = "LISTA";
     private static final String VISTA_NUEVO = "NUEVO";
-    private static final String VISTA_TEMAS = "TEMAS";
 
     private ejbCcoCepCursoServiceLocal srvCurso;
     private ejbCcoCepNivelModalidadServiceLocal srvNivelModalidad;
+    private ejbCcoCepCecPlanServiceLocal srvPlan;
 
     public CursoController() {
         try {
             Context context = new InitialContext();
             srvCurso = (ejbCcoCepCursoServiceLocal) context.lookup(doGenerarJNDI("ejbCecomp", "1.0", "ejbCcoCepCursoServiceLocal"));
             srvNivelModalidad = (ejbCcoCepNivelModalidadServiceLocal) context.lookup(doGenerarJNDI("ejbCecomp", "1.0", "ejbCcoCepNivelModalidadServiceLocal"));
+            srvPlan = (ejbCcoCepCecPlanServiceLocal) context.lookup(doGenerarJNDI("ejbCecomp", "1.0", "ejbCcoCepCecPlanServiceLocal"));
         } catch (NamingException e) {
-            System.out.println("Error cursoController: " + e);
+            System.out.println("Error cursoController constructor: " + e.getMessage());
+            e.printStackTrace();
         }
     }
 
@@ -56,19 +61,28 @@ public class CursoController implements Serializable {
         strBusqueda = "";
         cargarCursos();
         cargarNivelesModalidad();
+        cargarPlanesDisponibles();
+        limpiarFormulario();
+    }
+
+    private void limpiarFormulario() {
         clsCursoDTO = new ejbCcoCursoDTO();
         clsCursoDTO.setCurso(new ejbCcoCepCurso());
         clsCursoDTO.getCurso().setBandera(true);
-        temas = buildTemasVacios(4);
         idEdicion = null;
         idNivelSeleccionado = null;
+        idPlanSeleccionado = null;
     }
 
     private void cargarNivelesModalidad() {
         try {
             lstNivelesModalidad = srvNivelModalidad.listarNivelesModalidad();
-            System.out.println("Niveles cargados: " + (lstNivelesModalidad != null ? lstNivelesModalidad.size() : 0));
+            if (lstNivelesModalidad == null) {
+                lstNivelesModalidad = new ArrayList<>();
+            }
+            System.out.println("Niveles cargados: " + lstNivelesModalidad.size());
         } catch (Exception e) {
+            System.out.println("Error al cargar niveles: " + e.getMessage());
             lstNivelesModalidad = new ArrayList<>();
         }
     }
@@ -77,13 +91,36 @@ public class CursoController implements Serializable {
         try {
             List<ejbCcoCepCurso> cursos = srvCurso.listarActivos();
             lstCursosDTO = new ArrayList<>();
-            for (ejbCcoCepCurso curso : cursos) {
-                lstCursosDTO.add(new ejbCcoCursoDTO(curso));
+            if (cursos != null) {
+                for (ejbCcoCepCurso curso : cursos) {
+                    ejbCcoCursoDTO dto = new ejbCcoCursoDTO(curso);
+                    if (curso.getCepNivelModalidad() != null) {
+                        dto.setNombreNivel(curso.getCepNivelModalidad().getNomNivMod());
+                    }
+                    if (curso.getCepCecPlan() != null) {
+                        dto.setNombrePlan(curso.getCepCecPlan().getNomPland());
+                    }
+                    lstCursosDTO.add(dto);
+                }
             }
             lstCursosViewDTO = new ArrayList<>(lstCursosDTO);
         } catch (Exception e) {
+            System.out.println("Error al cargar cursos: " + e.getMessage());
             lstCursosDTO = new ArrayList<>();
             lstCursosViewDTO = new ArrayList<>();
+        }
+    }
+
+    private void cargarPlanesDisponibles() {
+        try {
+            lstPlanesDisponibles = srvPlan.listarActivos();
+            if (lstPlanesDisponibles == null) {
+                lstPlanesDisponibles = new ArrayList<>();
+            }
+            System.out.println("Planes cargados: " + lstPlanesDisponibles.size());
+        } catch (Exception e) {
+            System.out.println("Error al cargar planes: " + e.getMessage());
+            lstPlanesDisponibles = new ArrayList<>();
         }
     }
 
@@ -97,7 +134,9 @@ public class CursoController implements Serializable {
             List<ejbCcoCursoDTO> filtrado = new ArrayList<>();
             for (ejbCcoCursoDTO dto : lstCursosDTO) {
                 String nombre = dto.getCurso() != null ? dto.getCurso().getNomCurso() : "";
-                if (nombre.toLowerCase().contains(q)) filtrado.add(dto);
+                if (nombre != null && nombre.toLowerCase().contains(q)) {
+                    filtrado.add(dto);
+                }
             }
             lstCursosViewDTO = filtrado;
         }
@@ -107,56 +146,93 @@ public class CursoController implements Serializable {
     public void doNuevo() {
         System.out.println("Llegó a doNuevo");
         strValor = VISTA_NUEVO;
-        idEdicion = null;
-        clsCursoDTO = new ejbCcoCursoDTO();
-        clsCursoDTO.setCurso(new ejbCcoCepCurso());
-        clsCursoDTO.getCurso().setBandera(true);
-        temas = buildTemasVacios(4);
-        idNivelSeleccionado = null;
-
-        if (lstNivelesModalidad != null && !lstNivelesModalidad.isEmpty()) {
-            idNivelSeleccionado = lstNivelesModalidad.get(0).getIdNivMod();
+        limpiarFormulario();
+        
+        if ((lstNivelesModalidad == null || lstNivelesModalidad.isEmpty()) && srvNivelModalidad != null) {
+            cargarNivelesModalidad();
+        }
+        if ((lstPlanesDisponibles == null || lstPlanesDisponibles.isEmpty()) && srvPlan != null) {
+            cargarPlanesDisponibles();
         }
     }
 
     public void doEditar(ejbCcoCursoDTO cursoDTO) {
         System.out.println("Llegó a doEditar");
-        if (cursoDTO == null || cursoDTO.getCurso() == null) return;
-
-        strValor = VISTA_NUEVO;
-        idEdicion = cursoDTO.getCurso().getIdCurso();
-        ejbCcoCepCurso cursoCompleto = srvCurso.buscarPorId(cursoDTO.getCurso().getIdCurso());
-        clsCursoDTO = new ejbCcoCursoDTO(cursoCompleto);
-
-        if (cursoCompleto.getCepNivelModalidad() != null) {
-            idNivelSeleccionado = cursoCompleto.getCepNivelModalidad().getIdNivMod();
-        } else {
-            idNivelSeleccionado = null;
+        if (cursoDTO == null || cursoDTO.getCurso() == null || cursoDTO.getCurso().getIdCurso() == null) {
+            generalController.getFramework().doMensajeF("ERROR", "Curso no válido para editar", 3);
+            return;
         }
 
-        if (lstNivelesModalidad == null || lstNivelesModalidad.isEmpty()) {
-            cargarNivelesModalidad();
+        try {
+            strValor = VISTA_NUEVO;
+            idEdicion = cursoDTO.getCurso().getIdCurso();
+            
+            ejbCcoCepCurso cursoCompleto = srvCurso.buscarPorId(idEdicion);
+            if (cursoCompleto == null) {
+                generalController.getFramework().doMensajeF("ERROR", "No se encontró el curso", 3);
+                return;
+            }
+            
+            clsCursoDTO = new ejbCcoCursoDTO(cursoCompleto);
+            
+            if (cursoCompleto.getCepNivelModalidad() != null) {
+                idNivelSeleccionado = cursoCompleto.getCepNivelModalidad().getIdNivMod();
+            } else {
+                idNivelSeleccionado = null;
+            }
+            
+            if (cursoCompleto.getCepCecPlan() != null) {
+                idPlanSeleccionado = cursoCompleto.getCepCecPlan().getIdPland();
+            } else {
+                idPlanSeleccionado = null;
+            }
+            
+            if ((lstNivelesModalidad == null || lstNivelesModalidad.isEmpty()) && srvNivelModalidad != null) {
+                cargarNivelesModalidad();
+            }
+            if ((lstPlanesDisponibles == null || lstPlanesDisponibles.isEmpty()) && srvPlan != null) {
+                cargarPlanesDisponibles();
+            }
+            
+        } catch (Exception e) {
+            System.out.println("Error al editar curso: " + e.getMessage());
+            e.printStackTrace();
+            generalController.getFramework().doMensajeF("ERROR", "Error al cargar el curso para editar", 3);
         }
-        temas = buildTemasVacios(4);
     }
 
     public void doGuardar() {
         System.out.println("Llegó a doGuardar");
+        
         if (!validarCursoBasico()) return;
+        
+        if (idNivelSeleccionado == null) {
+            generalController.getFramework().doMensajeF("VALIDACIÓN", "Debe seleccionar un nivel", 2);
+            return;
+        }
 
         try {
-            ejbCcoCepNivelModalidad nivel = null;
-            if (idNivelSeleccionado != null) {
-                nivel = srvNivelModalidad.buscarPorId(idNivelSeleccionado);
+            ejbCcoCepNivelModalidad nivel = srvNivelModalidad.buscarPorId(idNivelSeleccionado);
+            if (nivel == null) {
+                generalController.getFramework().doMensajeF("VALIDACIÓN", "Nivel no válido", 2);
+                return;
+            }
+            
+            ejbCcoCepCecPlan plan = null;
+            if (idPlanSeleccionado != null && idPlanSeleccionado > 0) {
+                plan = srvPlan.buscarPorId(idPlanSeleccionado);
             }
 
             ejbCcoCepCurso cursoGuardar = clsCursoDTO.getCurso();
             if (cursoGuardar == null) {
                 cursoGuardar = new ejbCcoCepCurso();
             }
+            
             cursoGuardar.setCepNivelModalidad(nivel);
+            cursoGuardar.setCepCecPlan(plan);
+            cursoGuardar.setBandera(true);
 
-            if (idEdicion == null || idEdicion == 0) {
+            if (idEdicion == null) {
                 int nuevoId = obtenerNuevoIdCurso();
                 cursoGuardar.setIdCurso(nuevoId);
                 srvCurso.crear(cursoGuardar);
@@ -174,46 +250,37 @@ public class CursoController implements Serializable {
         } catch (Exception e) {
             System.out.println("Error al guardar: " + e.getMessage());
             e.printStackTrace();
-            generalController.getFramework().doMensajeF("ERROR", "Error al guardar el curso", 3);
+            generalController.getFramework().doMensajeF("ERROR", "Error al guardar el curso: " + e.getMessage(), 3);
         }
-    }
-
-    public void doGuardarTemas() {
-        if (!validarCursoBasico()) return;
-        if (!validarTemas()) return;
-        if (clsCursoDTO != null) {
-            clsCursoDTO.setTemas(limpiarTemas(temas));
-        }
-        doGuardar();
-    }
-
-    public void doEliminar(ejbCcoCursoDTO cursoDTO) {
-        if (cursoDTO == null || cursoDTO.getCurso() == null) return;
-        ejbCcoCepCurso curso = cursoDTO.getCurso();
-        curso.setBandera(false);
-        srvCurso.actualizar(curso);
-        generalController.getFramework().doMensajeF("BAJA", "Curso dado de baja correctamente", 2);
-        cargarCursos();
-        doBuscar();
     }
 
     public void doCambiarEstado(ejbCcoCursoDTO cursoDTO) {
-        if (cursoDTO == null || cursoDTO.getCurso() == null) return;
-        ejbCcoCepCurso curso = cursoDTO.getCurso();
-        boolean nuevoEstado = !curso.getBandera();
-        curso.setBandera(nuevoEstado);
-        srvCurso.actualizar(curso);
-        String mensaje = nuevoEstado ? "Curso activado correctamente" : "Curso dado de baja correctamente";
-        int tipoMsg = nuevoEstado ? 1 : 2;
-        generalController.getFramework().doMensajeF(nuevoEstado ? "ACTIVAR" : "BAJA", mensaje, tipoMsg);
-        cargarCursos();
-        doBuscar();
-    }
-
-    public void doContinuarTemas() {
-        if (!validarCursoBasico()) return;
-        if (temas == null || temas.isEmpty()) temas = buildTemasVacios(4);
-        strValor = VISTA_TEMAS;
+        if (cursoDTO == null || cursoDTO.getCurso() == null || cursoDTO.getCurso().getIdCurso() == null) {
+            generalController.getFramework().doMensajeF("ERROR", "Curso no válido", 3);
+            return;
+        }
+        
+        try {
+            ejbCcoCepCurso curso = srvCurso.buscarPorId(cursoDTO.getCurso().getIdCurso());
+            if (curso == null) {
+                generalController.getFramework().doMensajeF("ERROR", "No se encontró el curso", 3);
+                return;
+            }
+            
+            boolean nuevoEstado = !curso.getBandera();
+            curso.setBandera(nuevoEstado);
+            srvCurso.actualizar(curso);
+            
+            String mensaje = nuevoEstado ? "Curso activado correctamente" : "Curso dado de baja correctamente";
+            int tipoMsg = nuevoEstado ? 1 : 2;
+            generalController.getFramework().doMensajeF(nuevoEstado ? "ACTIVAR" : "BAJA", mensaje, tipoMsg);
+            
+            cargarCursos();
+            doBuscar();
+        } catch (Exception e) {
+            System.out.println("Error al cambiar estado: " + e.getMessage());
+            generalController.getFramework().doMensajeF("ERROR", "Error al cambiar estado del curso", 3);
+        }
     }
 
     public void doVolver() {
@@ -222,16 +289,14 @@ public class CursoController implements Serializable {
         doBuscar();
     }
 
-    public void doVolverCursoDesdeTemas() {
-        strValor = VISTA_NUEVO;
-    }
-
     private int obtenerNuevoIdCurso() {
         int maxId = 0;
         if (lstCursosDTO != null && !lstCursosDTO.isEmpty()) {
             for (ejbCcoCursoDTO dto : lstCursosDTO) {
-                Integer id = dto.getCurso() != null ? dto.getCurso().getIdCurso() : null;
-                if (id != null && id > maxId) maxId = id;
+                if (dto != null && dto.getCurso() != null && dto.getCurso().getIdCurso() != null) {
+                    Integer id = dto.getCurso().getIdCurso();
+                    if (id > maxId) maxId = id;
+                }
             }
         }
         return maxId + 1;
@@ -260,31 +325,7 @@ public class CursoController implements Serializable {
         return true;
     }
 
-    private boolean validarTemas() {
-        List<String> limp = limpiarTemas(temas);
-        if (limp.isEmpty()) {
-            generalController.getFramework().doMensajeF("VALIDACIÓN", "Ingrese al menos 1 tema", 2);
-            return false;
-        }
-        return true;
-    }
-
-    private List<String> buildTemasVacios(int n) {
-        List<String> t = new ArrayList<>();
-        for (int i = 0; i < n; i++) t.add("");
-        return t;
-    }
-
-    private List<String> limpiarTemas(List<String> in) {
-        if (in == null) return new ArrayList<>();
-        List<String> out = new ArrayList<>();
-        for (String s : in) {
-            if (s != null && !s.trim().isBlank()) out.add(s.trim());
-        }
-        return out;
-    }
-
     private boolean isBlank(String s) {
-        return s == null || s.trim().isBlank();
+        return s == null || s.trim().isEmpty();
     }
 }
